<resources>
    <string name="app_name">Currency Converter</string>
    <string name="bottom_nav_title_converter">Converter</string>
    <string name="bottom_nav_title_currency_list">Currency list</string>
    <string name="bottom_nav_title_weekly_rates">Weekly rates</string>


    <string name="header_currencies_list_buying_rate">Buying rate</string>
    <string name="header_currencies_list_middle_rate">Middle rate</string>
    <string name="header_currencies_list_selling_rate">Selling rate</string>


    <string name="insert_convert_value">Insert convert value</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hrk">HRK</string>
    <string name="currency_disclaimer">For now, we only support converting with HRK as a base currency due to open API restrictions we are using.</string>
    <string name="calculate">Calculate</string>

    <string name="invalid_number_input">Invalid number input. Please, try again.</string>

    <string name="select_currency_dialog_title">Select another currency</string>
    <string name="select_currency_dialog_positive_button">OK</string>
    <string name="select_currency_dialog_negative_button">Cancel</string>

    <string name="no_internet_connection_title">Seems like you\'re offline. Check your Internet connection and retry.</string>
    <string name="retry_button">Retry</string>
</resources>